editor-components/pricing-table/pricing-table3/pricing-table3.module.scss
@use "../../../composer-base-components/base/utitilities/viewports.module.scss" as *;

@keyframes pulse {
  0% {
    transform: scale(1.05);
  }

  100% {
    transform: scale(1.1);
  }
}

.container {

  .max-content {
    content: "";
  }
}

.wrapper {
  display: flex;
  align-items: center;
  gap: var(--composer-gap-lg);

  .featured {
    width: 40%;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    text-align: left;

    .title,
    .description {
      width: 100%;
      text-align: left;
      margin-left: 0;
    }

    .subtitle {
      width: fit-content;
      text-align: left;
      margin-left: 0;
    }

    .top-level-buttons {
      display: flex;
      flex-direction: row;
      flex-wrap: wrap;
      gap: var(--composer-gap-sm);
      place-self: flex-start;

      .button {

        .button-text,
        .button-icon {
          content: "";
        }

        .button-icon {
          font-size: 1.5rem;
          height: calc(var(--composer-gap-md) + var(--composer-gap-xs));
          width: calc(var(--composer-gap-md) + var(--composer-gap-xs));
          display: flex;
          align-items: center;
          justify-content: center;
        }
      }
    }
  }

  .featured-alternate {
    width: 100%;
  }

  .cards-div,
  .cards-div-alternate {
    display: flex;
    align-items: center;
  }

  .cards-div {
    width: 65%;
    justify-content: center;
  }

  .cards-div-alternate {
    width: 100%;
    justify-content: center;
  }

  .card-container {
    width: 100%;
    border: 1px solid var(--composer-tertiary-color);
    border-radius: var(--composer-border-radius-md);

    display: flex;
    justify-content: center;
    align-items: center;
    background-color: var(--composer-html-background);
    padding: var(--composer-gap-md);
    transition-duration: 0.8s;

    &.animation1:hover {
      transform: scale(1.1);
    }

    &.animation2:hover {
      .card {
        .card-content {
          .body {
            .item {
              .item-line {
                &::before {
                  width: 100%;
                }
              }
            }
          }
        }
      }
    }

    &.animation3:hover {
      .card {
        .card-content {
          .header {
            .price-container {
              width: 100%;
              position: relative;
              padding-bottom: var(--composer-gap-sm);
              margin-bottom: var(--composer-gap-md);
            }

            .price {
              animation-name: pulse;
              animation-duration: 1s;
              animation-timing-function: ease-in-and-out;
              animation-iteration-count: infinite;
              animation-direction: alternate;
            }
          }
        }
      }
    }

    &.active {
      padding: var(--composer-gap-xl);
      position: relative;
      z-index: 10;

      .tag {
        position: absolute;
        top: 0;
        left: 50%;
        padding: var(--composer-gap-sm) var(--composer-gap-md);
        transform: translate(-50%, -50%);
        color: var(--composer-font-color-secondary);
        border: 1px solid var(--composer-primary-color);
        background-color: var(--composer-primary-color);
        max-width: 100%;
      }
    }

    .card {
      .card-content {
        justify-content: center;
        align-self: center;
        width: 100%;
        display: flex;
        flex-direction: column;
        align-items: center;
        gap: var(--composer-gap-md);

        .header {
          align-self: center;
          width: 100%;
          display: flex;
          flex-direction: column;
          align-items: center;

          .icon {
            color: var(--composer-primary-color);
            width: var(--composer-gap-xl);
            height: var(--composer-gap-xl);
            display: flex;
            align-items: center;
            justify-content: center;
            font-size: 2.5rem;
            margin-bottom: var(--composer-gap-md);
          }

          .title {
            color: var(--composer-tertiary-color);
            text-align: center;
            width: 100%;
          }

          .price {
            margin: 0;
            color: var(--composer-font-color-primary);
            width: 100%;
            text-align: center;
          }
        }

        .body {
          width: 100%;

          .body-content {
            display: flex;
            flex-direction: column;
            width: 100%;
            gap: var(--composer-gap-md);

            .price-container {
              width: 100%;
              position: relative;
              padding-bottom: var(--composer-gap-sm);
            }
          }

          .items {
            width: 100%;
            display: flex;
            flex-direction: column;
            align-items: center;

            .item {
              padding: var(--composer-gap-sm);
              width: 100%;
              color: var(--composer-font-color-primary);
              text-align: center;
              position: relative;

              .item-line {
                position: absolute;
                bottom: 0;
                left: 0;
                width: 100%;
                height: 1px;
                background: rgba(var(--composer-font-color-primary-rgb), 0.2);

                &::before {
                  content: "";
                  position: absolute;
                  bottom: 0;
                  left: 0;
                  width: 0;
                  height: 1px;
                  background: var(--composer-primary-color);
                  transition: width 0.8s ease-in-out;
                }
              }
            }
          }
        }

        .footer {
          display: flex;
          flex-wrap: wrap;
          justify-content: center;
          gap: var(--composer-gap-sm);
          width: 100%;

          .button {

            .button-text,
            .button-icon {
              content: "";
            }

            .button-icon {
              display: flex;
              align-items: center;
              justify-content: center;
            }
          }
        }
      }
    }
  }
}

@container (max-width: #{$composer-phone-width}) {
  .wrapper {
    flex-direction: column;
    gap: var(--composer-gap-md);

    .featured {
      width: 100%;
      align-items: flex-start;
      text-align: left;

      .title,
      .subtitle,
      .description {
        text-align: left;
        margin-left: 0;
        margin-right: 0;
        align-self: flex-start;
      }

      .top-level-buttons {
        justify-content: flex-start;
        place-self: flex-start;
      }
    }

    .cards-div,
    .cards-div-alternate {
      width: 100%;
      flex-direction: column;
      gap: var(--composer-gap-lg);

      .card-container {
        width: 100%;

        &.active {
          scale: 1;
        }
      }
    }
  }
}

